made the max width of the body 1920px to prevent over stretching of the content above this limit, suitable fo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    max-width: 1920px;
 }
 
 
@@ -93,6 +94,7 @@ nav>ul>li {
 
 #here {
     all: unset;
+    color: #d6d4d4;
     text-decoration: underline;
     cursor: pointer;
 }
@@ -283,7 +285,7 @@ strong {
     display: flex;
     width: 100%;
     min-height: 80vh;
-    margin: auto;
+    margin: 0 auto;
     align-items: center;
     justify-content: space-around;
 }
@@ -291,8 +293,8 @@ strong {
 .gallery-imgs img {
     display: block;
     width: 100%;
-    margin: 10px;
-    min-width: 280px;
+    margin: 0 auto;
+    min-width: 250px;
     max-width: 800px;
     padding: 2px 0 2px 0;
     height: auto;
